tests/errors/erc_error.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin A: power_out = 1;
}

component Main {
    net VCC;

    Foo {
        A: VCC;
    }

    Foo {
        A: VCC;
    }
}